fix: timezone-wrap in App.css

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   margin: 50px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .num-clock {
